# minebak

./: .gitignore  Cargo.toml  README.md  components.d.ts  flake.nix  index.html  package-lock.json  package.json  vite.config.ts
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 6a60lqhb301lllqzps3vsyf4vpxghclq-source  z7kyay3qczyfmsc6c3nvgjaiai64arf5-source
resources/: autostart.desktop
src/: App.vue  cloud_sync.rs  cmd.rs  config.rs  main.rs  main.ts  routes.ts  style.css  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  tauri_backend.rs  utils.rs
src-tauri/src/backup/: base.rs  increasement.rs  instance.rs  mod.rs  save.rs
src-tauri/src/errors/: mod.rs
src/backup/: instance.rs  mod.rs  save.rs
src/components/: AboutView.vue  SettingsView.vue
src/components/saves/: InstanceCard.vue
src/ui/: components.rs  mod.rs  theming.rs
src/ui/components/: central.rs  mod.rs
src/ui/components/central/: mod.rs  save_list.rs
src/ui/components/window/: add_save_window.rs  configuration.rs  mod.rs  recover_window.rs  save_edit_window.rs
src/views/: HomeView.vue  SavesView.vue
