[package]
name = "mine_bak"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive"] }
data-encoding = "2.9.0"
eframe = "0.32.0"
egui_extras = { version = "0.32.0", features = ["all_loaders"] }
log = "0.4.27"
log4rs = "1.3.0"
rfd = "0.15.4"
ring = "0.17.14"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
tar = "0.4.44"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
walkdir = "2.5.0"
zstd = "0.13.3"
