[package]
name = "minebak"
version = "0.1.0"
description = "A tool to backup your Minecraft saves"
authors = ["lwb-2021"]
license = ""
repository = "https://github.com/lwb-2021/minebak"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", features = ["std"] }
tauri = { version = "2.8.5", features = ["tray-icon"] }
tauri-plugin-log = { version = "2", features = ["colored"] }
tokio = "1.47.1"
tauri-plugin-dialog = "2"
thiserror = "2.0.17"
